--- a/python_learning_course/Myapp/test.ipynb
+++ b/python_learning_course/Myapp/test.ipynb
@@ -28,46 +28,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "import math\n",
-    "import statistics #this is the statistic module\n",
-    "#sys.stdout.write('hello_world\\n')\n",
-    "#sys.stderr.write('This is an error code\\n')\n",
-    "#sys.stderr.flush()\n",
-    "\n",
-    "#hello = sys.argv\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "\n"
+      "5\n"
      ]
     }
    ],
    "source": [
-    "#sys_methods_or_functions\n",
+    "from mypackage.f import hello\n",
+    "from mypackage.f import functions\n",
     "\n",
-    "#get_the systems size\n",
-    "sys.maxsize\n",
     "\n",
-    "#This is an environment variable that is a search path for all Python modules.\n",
-    "sys.path\n",
-    "\n",
-    "dir(math)\n",
-    "dir(statistics)\n",
-    "print()\n"
+    "print(functions.sum(2,3))\n"
    ]
   },
   {
